directory structure, introduction notes

--- a/body.tex
+++ b/body.tex
@@ -1,3 +1,14 @@
+\part{Introduction and Motivation}
 \input{chapters/introduction/content.tex}
+
+\part{Social Choice Perspectives}
 \input{chapters/truthdiscovery/content.tex}
+\input{chapters/tournaments/content.tex}
+
+\part{Logic-based Perspectives}
+\input{chapters/expertise/content.tex}
+\input{chapters/belief-change/content.tex}
+\input{chapters/truth-tracking/content.tex}
+
+\part{Conclusions}
 \input{chapters/conclusion/content.tex}
