intro sections for each part

--- a/body.tex
+++ b/body.tex
@@ -2,10 +2,12 @@
 \input{chapters/introduction/content.tex}
 
 \part{Social Choice Perspectives}
+\input{chapters/social-choice-introduction/content.tex}
 \input{chapters/truthdiscovery/content.tex}
 \input{chapters/tournaments/content.tex}
 
 \part{Logic-based Perspectives}
+\input{chapters/logic-introduction/content.tex}
 \input{chapters/expertise/content.tex}
 \input{chapters/belief-change/content.tex}
 \input{chapters/truth-tracking/content.tex}
