--- a/main.tex
+++ b/main.tex
@@ -37,9 +37,8 @@
 
 % for development only
 \usepackage{lipsum}
-\newenvironment{notes}
-    {\begingroup \color{violet}}
-    {\endgroup}
+
+\input{macros.tex}
 
 \begin{document}
 
