add axiomatic td paper

--- a/macros.tex
+++ b/macros.tex
@@ -4,3 +4,14 @@
     {\endgroup}
 
 \newcommand{\todo}[1]{{\color{red}[\textbf{TODO:} {#1}]}}
+
+% maths environments
+\theoremstyle{plain}\newtheorem{example}{Example}
+\theoremstyle{plain}\newtheorem{theorem}{Theorem}
+\theoremstyle{plain}\newtheorem{proposition}{Proposition}
+\theoremstyle{plain}\newtheorem{lemma}{Lemma}
+\theoremstyle{plain}\newtheorem{definition}{Definition}
+\theoremstyle{plain}\newtheorem*{notation}{Notation}
+\theoremstyle{plain}\newtheorem{claim}{Claim}
+\theoremstyle{plain}\newtheorem{corollary}{Corollary}
+\theoremstyle{plain}\newtheorem{axiom}{Axiom}
