--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,689 @@
   copyright = {Creative Commons Attribution 4.0 International}
 }
 
+@conference{christoffbinary,
+	Author = {Christoff, Zo{\'e} and Grossi, Davide},
+	Booktitle = {Proc. TARK 2017},
+	Date-Added = {2019-09-03 22:16:59 +0100},
+	Date-Modified = {2019-09-03 22:17:43 +0100},
+	Title = {Binary Voting with Delegable Proxy: An Analysis of Liquid Democracy},
+	Year = {2017}}
+
+@inproceedings{altman2005ranking,
+	Author = {Altman, Alon and Tennenholtz, Moshe},
+	Booktitle = {Proceedings of the 6th ACM conference on Electronic commerce},
+	Date-Added = {2019-08-06 13:40:06 +0100},
+	Date-Modified = {2019-08-06 13:40:06 +0100},
+	Organization = {ACM},
+	Pages = {1--8},
+	Title = {Ranking systems: the PageRank axioms},
+	Year = {2005}}
+
+@inproceedings{pasternack2010,
+	Acmid = {1873880},
+	Address = {Stroudsburg, PA, USA},
+	Author = {Pasternack, Jeff and Roth, Dan},
+	Booktitle = {Proceedings of the 23rd International Conference on Computational Linguistics},
+	Location = {Beijing, China},
+	Numpages = {9},
+	Pages = {877--885},
+	Publisher = {Association for Computational Linguistics},
+	Series = {COLING '10},
+	Title = {Knowing What to Believe (when You Already Know Something)},
+	Url = {http://dl.acm.org/citation.cfm?id=1873781.1873880},
+	Year = {2010},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1873781.1873880}}
+
+@article{kleinberg1999,
+	Acmid = {324140},
+	Address = {New York, NY, USA},
+	Author = {Kleinberg, Jon M.},
+	Doi = {10.1145/324133.324140},
+	Issn = {0004-5411},
+	Issue_Date = {Sept. 1999},
+	Journal = {J. ACM},
+	Keywords = {World Wide Web, graph algorithms, hypertext structure, link analysis},
+	Month = sep,
+	Number = {5},
+	Numpages = {29},
+	Pages = {604--632},
+	Publisher = {ACM},
+	Title = {Authoritative Sources in a Hyperlinked Environment},
+	Url = {http://doi.acm.org/10.1145/324133.324140},
+	Volume = {46},
+	Year = {1999},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/324133.324140},
+	Bdsk-Url-2 = {https://doi.org/10.1145/324133.324140}}
+
+@inproceedings{kruger2014,
+	Acmid = {2617437},
+	Address = {Richland, SC},
+	Author = {Kruger, Justin and Endriss, Ulle and Fernandez, Raquel and Qing, Ciyang},
+	Booktitle = {Proceedings of the 2014 International Conference on Autonomous Agents and Multi-agent Systems},
+	Isbn = {978-1-4503-2738-1},
+	Keywords = {annotation, computational social choice, crowdsourcing},
+	Location = {Paris, France},
+	Numpages = {8},
+	Pages = {1185--1192},
+	Publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+	Series = {AAMAS '14},
+	Title = {Axiomatic Analysis of Aggregation Methods for Collective Annotation},
+	Url = {http://dl.acm.org/citation.cfm?id=2617388.2617437},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=2617388.2617437}}
+
+@article{altman2008,
+	Acmid = {1622669},
+	Address = {USA},
+	Author = {Altman, Alon and Tennenholtz, Moshe},
+	Issn = {1076-9757},
+	Issue_Date = {January 2008},
+	Journal = {J. Artif. Int. Res.},
+	Month = mar,
+	Number = {1},
+	Numpages = {23},
+	Pages = {473--495},
+	Publisher = {AI Access Foundation},
+	Title = {Axiomatic Foundations for Ranking Systems},
+	Url = {http://dl.acm.org/citation.cfm?id=1622655.1622669},
+	Volume = {31},
+	Year = {2008},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1622655.1622669}}
+
+@incollection{zwicker2016voting,
+	Address = {New York, NY, USA},
+	Author = {William S. Zwicker},
+	Booktitle = {Handbook of Computational Social Choice},
+	Chapter = {2},
+	Edition = {1st},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Publisher = {Cambridge University Press},
+	Title = {Introduction to the Theory of Voting},
+	Year = {2016}}
+
+@incollection{endriss2016ja,
+	Address = {New York, NY, USA},
+	Author = {Ulle Endriss},
+	Booktitle = {Handbook of Computational Social Choice},
+	Chapter = {17},
+	Edition = {1st},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Publisher = {Cambridge University Press},
+	Title = {Judgment Aggregation},
+	Year = {2016}}
+
+@incollection{brandt2016introduction,
+	Address = {New York, NY, USA},
+	Author = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Booktitle = {Handbook of Computational Social Choice},
+	Chapter = {1},
+	Edition = {1st},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Publisher = {Cambridge University Press},
+	Title = {Introduction to Computational Social Choice},
+	Year = {2016}}
+
+@article{dokow,
+	Author = {Elad Dokow and Ron Holzman},
+	Journal = {Journal of Economic Theory},
+	Number = {},
+	Pages = {544--561},
+	Publisher = {},
+	Title = {Aggregation of binary evaluations with abstentions},
+	Volume = {145},
+	Year = {2010}}
+
+@article{arrow1952,
+	Author = {Kenneth J. Arrow},
+	Journal = {Ethics},
+	Number = {3},
+	Pages = {220--222},
+	Publisher = {University of Chicago Press},
+	Title = {Social Choice and Individual Values},
+	Volume = {62},
+	Year = {1952}}
+
+@inproceedings{galland2010,
+	Acmid = {1718504},
+	Address = {New York, NY, USA},
+	Author = {Galland, Alban and Abiteboul, Serge and Marian, Am{\'e}lie and Senellart, Pierre},
+	Booktitle = {Proceedings of the Third ACM International Conference on Web Search and Data Mining},
+	Doi = {10.1145/1718487.1718504},
+	Isbn = {978-1-60558-889-6},
+	Keywords = {confidence, contradiction, corroboration, fix-point, probabilistic model, view},
+	Location = {New York, New York, USA},
+	Numpages = {10},
+	Pages = {131--140},
+	Publisher = {ACM},
+	Series = {WSDM '10},
+	Title = {Corroborating Information from Disagreeing Views},
+	Url = {http://doi.acm.org/10.1145/1718487.1718504},
+	Year = {2010},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1718487.1718504},
+	Bdsk-Url-2 = {https://doi.org/10.1145/1718487.1718504}}
+
+@article{yin2008,
+	Author = {Xiaoxin Yin and Jiawei Han and Philip S. Yu},
+	Doi = {10.1109/TKDE.2007.190745},
+	Issn = {1041-4347},
+	Journal = {IEEE Transactions on Knowledge and Data Engineering},
+	Keywords = {search engines;Web sites;truth discovery;multiple conflicting information providers;World Wide Web;information source;Veracity;TRUTHFINDER;Websites;search engines;Books;Web sites;Internet;Web page design;Algorithm design and analysis;Iterative algorithms;Iterative methods;Search engines;Web mining;Data mining;Web mining;Data mining;Web mining},
+	Month = {June},
+	Number = {6},
+	Pages = {796-808},
+	Title = {Truth Discovery with Multiple Conflicting Information Providers on the Web},
+	Volume = {20},
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TKDE.2007.190745}}
+
+@inproceedings{zhi2015,
+	Acmid = {2783339},
+	Address = {New York, NY, USA},
+	Author = {Zhi, Shi and Zhao, Bo and Tong, Wenzhu and Gao, Jing and Yu, Dian and Ji, Heng and Han, Jiawei},
+	Booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	Doi = {10.1145/2783258.2783339},
+	Isbn = {978-1-4503-3664-2},
+	Keywords = {information extraction, information integration system, knowledge base, knowledge graph, probabilistic graphical model, source quality, truth discovery, truth existence, truth finding},
+	Location = {Sydney, NSW, Australia},
+	Numpages = {10},
+	Pages = {1543--1552},
+	Publisher = {ACM},
+	Series = {KDD '15},
+	Title = {Modeling Truth Existence in Truth Discovery},
+	Url = {http://doi.acm.org/10.1145/2783258.2783339},
+	Year = {2015},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2783258.2783339},
+	Bdsk-Url-2 = {https://doi.org/10.1145/2783258.2783339}}
+
+@article{zhang2018,
+	Author = {Liyan {Zhang} and Guo-Jun {Qi} and Dong {Zhang} and Jinhui {Tang}},
+	Doi = {10.1109/ACCESS.2017.2780182},
+	Issn = {2169-3536},
+	Journal = {IEEE Access},
+	Pages = {1741-1752},
+	Title = {Latent Dirichlet Truth Discovery: Separating Trustworthy and Untrustworthy Components in Data Sources},
+	Volume = {6},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1109/ACCESS.2017.2780182}}
+
+@article{li2016,
+	Author = {Yaliang {Li} and Qi {Li} and Jing {Gao} and Lu {Su} and Bo {Zhao} and Wei {Fan} and Jiawei {Han}},
+	Doi = {10.1109/TKDE.2016.2559481},
+	Issn = {1041-4347},
+	Journal = {IEEE Transactions on Knowledge and Data Engineering},
+	Month = {Aug},
+	Number = {8},
+	Pages = {1986-1999},
+	Title = {Conflicts to Harmony: A Framework for Resolving Conflicts in Heterogeneous Data by Truth Discovery},
+	Volume = {28},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TKDE.2016.2559481}}
+
+@article{gupta2011survey,
+	Acmid = {2031341},
+	Address = {New York, NY, USA},
+	Author = {Gupta, Manish and Han, Jiawei},
+	Doi = {10.1145/2031331.2031341},
+	Issn = {1931-0145},
+	Issue_Date = {June 2011},
+	Journal = {SIGKDD Explor. Newsl.},
+	Month = aug,
+	Number = {1},
+	Numpages = {18},
+	Pages = {54--71},
+	Publisher = {ACM},
+	Title = {Heterogeneous Network-based Trust Analysis: A Survey},
+	Url = {http://doi.acm.org/10.1145/2031331.2031341},
+	Volume = {13},
+	Year = {2011},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2031331.2031341},
+	Bdsk-Url-2 = {https://doi.org/10.1145/2031331.2031341}}
+
+@inproceedings{tennenholtz2004,
+	Acmid = {1036909},
+	Address = {Arlington, Virginia, United States},
+	Author = {Tennenholtz, Moshe},
+	Booktitle = {Proceedings of the 20th Conference on Uncertainty in Artificial Intelligence},
+	Isbn = {0-9749039-0-6},
+	Location = {Banff, Canada},
+	Numpages = {8},
+	Pages = {544--551},
+	Publisher = {AUAI Press},
+	Series = {UAI '04},
+	Title = {Reputation Systems: An Axiomatic Approach},
+	Url = {http://dl.acm.org/citation.cfm?id=1036843.1036909},
+	Year = {2004},
+	Bdsk-Url-1 = {http://dl.acm.org/citation.cfm?id=1036843.1036909}}
+
+@inproceedings{ma2017,
+ author = {Ma, Fenglong and Meng, Chuishi and Xiao, Houping and Li, Qi and Gao, Jing and Su, Lu and Zhang, Aidong},
+ title = {Unsupervised Discovery of Drug Side-Effects from Heterogeneous Data Sources},
+ booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '17},
+ year = {2017},
+ isbn = {978-1-4503-4887-4},
+ location = {Halifax, NS, Canada},
+ pages = {967--976},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/3097983.3098129},
+ doi = {10.1145/3097983.3098129},
+ acmid = {3098129},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@article{eisenschlos,
+	title = {Predicting the Quality of New Contributors to the Facebook Crowdsourcing System},
+	author = {Eisenschlos, Julian M.},
+}
+
+@inproceedings{aslam2012,
+ author = {Aslam, Javed and Lim, Sejoon and Pan, Xinghao and Rus, Daniela},
+ title = {City-scale Traffic Estimation from a Roving Sensor Network},
+ booktitle = {Proceedings of the 10th ACM Conference on Embedded Network Sensor Systems},
+ series = {SenSys '12},
+ year = {2012},
+ isbn = {978-1-4503-1169-4},
+ location = {Toronto, Ontario, Canada},
+ pages = {141--154},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2426656.2426671},
+ doi = {10.1145/2426656.2426671},
+ acmid = {2426671},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{gil2017,
+	location = {New York, {NY}, {USA}},
+	title = {On the Challenges of Mobile Crowdsensing for Traffic Estimation},
+	isbn = {978-1-4503-5459-2},
+	url = {http://doi.acm.org/10.1145/3131672.3136958},
+	doi = {10.1145/3131672.3136958},
+	series = {{SenSys} '17},
+	pages = {52:1--52:2},
+	booktitle = {Proceedings of the 15th {ACM} Conference on Embedded Network Sensor Systems},
+	publisher = {{ACM}},
+	author = {Gil, Daniela Socas and d'Orey, Pedro M. and Aguiar, Ana},
+	date = {2017},
+	note = {event-place: Delft, Netherlands},
+}
+
+@article{du2019,
+	title = {Bayesian Co-Clustering Truth Discovery for Mobile Crowd Sensing Systems},
+	issn = {1551-3203},
+	doi = {10.1109/TII.2019.2896287},
+	pages = {1--1},
+	Journal = {{IEEE} Transactions on Industrial Informatics},
+    author = {Du, Yang and Sun, Yu-E and Huang, He and Huang, Liusheng and Xu,
+    Hongli and Bao, Yu and Guo, Hansong},
+	year = {2019},
+}
+
+@inproceedings{andersen2008,
+	location = {New York, {NY}, {USA}},
+	title = {Trust-based Recommendation Systems: An Axiomatic Approach},
+	isbn = {978-1-60558-085-2},
+	url = {http://doi.acm.org/10.1145/1367497.1367525},
+	doi = {10.1145/1367497.1367525},
+	series = {{WWW} '08},
+	pages = {199--208},
+	booktitle = {Proceedings of the 17th International Conference on World Wide Web},
+	publisher = {{ACM}},
+	author = {Andersen, Reid and Borgs, Christian and Chayes, Jennifer and Feige, Uriel and Flaxman, Abraham and Kalai, Adam and Mirrokni, Vahab and Tennenholtz, Moshe},
+	year = {2008},
+}
+
+@book{haggstrom2002,
+	title = {Finite Markov Chains and Algorithmic Applications},
+	series = {London Mathematical Society Student Texts},
+	publisher = {Cambridge University Press},
+	author = {H\"aggstr\"om, Olle},
+	date = {2002},
+	doi = {10.1017/CBO9780511613586},
+	keywords = {toread, probability},
+}
+
+@article{li_survey_2016,
+	title = {A Survey on Truth Discovery},
+	volume = {17},
+	issn = {1931-0145},
+	url = {http://doi.acm.org/10.1145/2897350.2897352},
+	doi = {10.1145/2897350.2897352},
+	pages = {1--16},
+	number = {2},
+	Journal = {{SIGKDD} Explor. Newsl.},
+	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
+	year = {2016},
+	keywords = {td, survey},
+}
+
+@inproceedings{yin_supervised_2011,
+	location = {New York, {NY}, {USA}},
+	title = {Semi-supervised Truth Discovery},
+	isbn = {978-1-4503-0632-4},
+	url = {http://doi.acm.org/10.1145/1963405.1963439},
+	doi = {10.1145/1963405.1963439},
+	series = {{WWW} '11},
+	pages = {217--226},
+	booktitle = {Proceedings of the 20th International Conference on World Wide Web},
+	publisher = {{ACM}},
+	author = {Yin, Xiaoxin and Tan, Wenzhao},
+	year = {2011},
+	note = {event-place: Hyderabad, India},
+	keywords = {td},
+}
+
+@inproceedings{xiao2016,
+    author = {Xiao, Houping and Gao, Jing and Wang, Zhaoran and Wang, Shiyu and Su, Lu and Liu, Han},
+    title = {A Truth Discovery Approach with Theoretical Guarantee},
+    booktitle = {Proceedings of the 22Nd ACM SIGKDD International Conference on
+    Knowledge Discovery and Data Mining},
+    series = {KDD '16},
+    year = {2016},
+    isbn = {978-1-4503-4232-2},
+    location = {San Francisco, California, USA},
+    pages = {1925--1934},
+    numpages = {10},
+    url = {http://doi.acm.org/10.1145/2939672.2939816},
+    doi = {10.1145/2939672.2939816},
+    acmid = {2939816},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {asymptotic consistency, mixture model, truth discovery},
+}
+
+@phdthesis{xiao_thesis2018,
+    author = {Xiao, Houping},
+    year = {2018},
+    school = {University at Buffalo, State University of New York},
+    title = {Multi-sourced Information Trustworthiness Analysis: Applications
+    and Theory}
+}
+
+@inproceedings{zhang_robust_2016,
+	title = {On robust truth discovery in sparse social media sensing},
+	doi = {10.1109/BigData.2016.7840710},
+	pages = {1076--1081},
+	booktitle = {2016 {IEEE} International Conference on Big Data (Big Data)},
+	author = {Zhang, Daniel Yue and Han, Rungang and Wang, Dong and Huang, Chao},
+	year = {2016-12},
+	keywords = {td},
+}
+
+@inproceedings{wang_truth_2012,
+	location = {New York, {NY}, {USA}},
+	title = {On Truth Discovery in Social Sensing: A Maximum Likelihood Estimation Approach},
+	isbn = {978-1-4503-1227-1},
+	url = {http://doi.acm.org/10.1145/2185677.2185737},
+	doi = {10.1145/2185677.2185737},
+	series = {{IPSN} '12},
+	pages = {233--244},
+	booktitle = {Proceedings of the 11th International Conference on Information Processing in Sensor Networks},
+	publisher = {{ACM}},
+	author = {Wang, Dong and Kaplan, Lance and Le, Hieu and Abdelzaher, Tarek},
+	year = {2012},
+	note = {event-place: Beijing, China},
+	keywords = {expectation maximization, maximum likelihood estimation, social sensing, truth discovery},
+}
+
+@inproceedings{ma_faitcrowd_2015,
+	address = {New York, NY, USA},
+	series = {{KDD} '15},
+	title = {{FaitCrowd}: {Fine} {Grained} {Truth} {Discovery} for {Crowdsourced} {Data} {Aggregation}},
+	isbn = {978-1-4503-3664-2},
+	url = {http://doi.acm.org/10.1145/2783258.2783314},
+	doi = {10.1145/2783258.2783314},
+	booktitle = {Proceedings of the 21th {ACM} {SIGKDD} {International} {Conference} on {Knowledge} {Discovery} and {Data} {Mining}},
+	publisher = {ACM},
+	author = {Ma, Fenglong and Li, Yaliang and Li, Qi and Qiu, Minghui and Gao, Jing and Zhi, Shi and Su, Lu and Zhao, Bo and Ji, Heng and Han, Jiawei},
+	year = {2015},
+	note = {event-place: Sydney, NSW, Australia},
+	keywords = {crowdsourcing, source reliability, truth discovery},
+	pages = {745--754},
+}
+
+@article{yang_probabilistic_2019,
+	title = {A probabilistic model for truth discovery with object correlations},
+	volume = {165},
+	issn = {0950-7051},
+	url = {http://www.sciencedirect.com/science/article/pii/S0950705118305914},
+	doi = {https://doi.org/10.1016/j.knosys.2018.12.004},
+	pages = {360 -- 373},
+	Journal = {Knowledge-Based Systems},
+	author = {Yang, Yi and Bai, Quan and Liu, Qing},
+	year = {2019},
+	keywords = {td},
+}
+
+@inproceedings{ding_finding_2016,
+  title={Finding global optimum for truth discovery: Entropy based geometric variance},
+  author={Ding, Hu and Gao, Jing and Xu, Jinhui},
+  booktitle={Proc. 32nd International Symposium on Computational Geometry (SoCG 2016)},
+  year={2016}
+}
+
+@incollection{yang_continuous_2018,
+        doi = {10.1007/978-3-030-02922-7_29},
+        url = {https://doi.org/10.1007%2F978-3-030-02922-7_29},
+        year = 2018,
+        publisher = {Springer International Publishing},
+        pages = {424--438},
+        author = {Yi Yang and Quan Bai and Qing Liu},
+        title = {On the Discovery of Continuous Truth: A Semi-supervised Approach with Partial Ground Truths},
+        booktitle = {Web Information Systems Engineering {\textendash} {WISE} 2018}
+}
+
+@inproceedings{everaere_epistemic_2010,
+  title={The Epistemic View of Belief Merging: Can We Track the Truth?.},
+  author={Everaere, Patricia and Konieczny, S{\'e}bastien and Marquis, Pierre and others},
+  booktitle={ECAI},
+  pages={621--626},
+  year={2010}
+}
+
+@article{hartmann_judgment_2012,
+	title = {Judgment aggregation and the problem of tracking the truth},
+	journal = {Synthese},
+	author = {Hartmann, Stephan and Sprenger, Jan},
+	year = {2012},
+	pages = {209--221},
+}
+
+@article{meir_proxy_2019,
+  author    = {Reshef Meir and
+               Ofra Amir and
+               Gal Cohensius and
+               Omer Ben{-}Porat and
+               Lirong Xia},
+  title     = {Truth Discovery via Proxy Voting},
+  journal   = {CoRR},
+  volume    = {abs/1905.00629},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.00629},
+  archivePrefix = {arXiv},
+  eprint    = {1905.00629},
+  timestamp = {Mon, 27 May 2019 13:15:00 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1905-00629.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{singleton_booth_2020,
+author = {Singleton, Joseph and Booth, Richard},
+title = {An Axiomatic Approach to Truth Discovery},
+year = {2020},
+isbn = {9781450375184},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {2011–2013},
+numpages = {3},
+keywords = {social choice theory, trust and reputation, axioms, truth discovery},
+location = {Auckland, New Zealand},
+series = {AAMAS ’20}
+}
+
+@inproceedings{ghosh_2011,
+	doi = {10.1145/1993574.1993599},
+	url = {https://doi.org/10.1145%2F1993574.1993599},
+	year = 2011,
+	publisher = {{ACM} Press},
+	author = {Arpita Ghosh and Satyen Kale and Preston McAfee},
+	title = {Who moderates the moderators?},
+	booktitle = {Proceedings of the 12th {ACM} conference on Electronic commerce - {EC} 11}
+}
+
+@book{axler2014,
+  doi = {10.1007/978-3-319-11080-6},
+  url = {https://doi.org/10.1007/978-3-319-11080-6},
+  year = {2014},
+  month = nov,
+  publisher = {Springer International Publishing},
+  author = {Sheldon Axler},
+  title = {Linear Algebra Done Right},
+}
+
+@article{dong_truth_2009,
+	title = {Truth {Discovery} and {Copying} {Detection} in a {Dynamic} {World}},
+	volume = {2},
+	issn = {2150-8097},
+	url = {https://doi.org/10.14778/1687627.1687691},
+	doi = {10.14778/1687627.1687691},
+	number = {1},
+	journal = {Proc. VLDB Endow.},
+	author = {Dong, Xin Luna and Berti-Equille, Laure and Srivastava, Divesh},
+	month = aug,
+	year = {2009},
+	keywords = {td},
+	pages = {562--573},
+}
+
+@inproceedings{kumar2016disinformation,
+  title={Disinformation on the web: Impact, characteristics, and detection of wikipedia hoaxes},
+  author={Kumar, Srijan and West, Robert and Leskovec, Jure},
+  booktitle={Proceedings of the 25th international conference on World Wide Web},
+  pages={591--602},
+  year={2016}
+}
+
+@inproceedings{wang2018eann,
+  title={Eann: Event adversarial neural networks for multi-modal fake news detection},
+  author={Wang, Yaqing and Ma, Fenglong and Jin, Zhiwei and Yuan, Ye and Xun, Guangxu and Jha, Kishlay and Su, Lu and Gao, Jing},
+  booktitle={Proceedings of the 24th acm sigkdd international conference on knowledge discovery \& data mining},
+  pages={849--857},
+  year={2018}
+}
+
+@article{waguih2014truth,
+  title={Truth discovery algorithms: An experimental evaluation},
+  author={Waguih, Dalia Attia and Berti-Equille, Laure},
+  journal={arXiv preprint arXiv:1409.6428},
+  year={2014}
+}
+
+@inproceedings{kotonya2020explainable,
+  title={Explainable Automated Fact-Checking for Public Health Claims},
+  author={Kotonya, Neema and Toni, Francesca},
+  booktitle={Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  pages={7740--7754},
+  year={2020}
+}
+
+@article{dong2009integrating,
+  title={Integrating conflicting data: the role of source dependence},
+  author={Dong, Xin Luna and Berti-Equille, Laure and Srivastava, Divesh},
+  journal={Proceedings of the VLDB Endowment},
+  volume={2},
+  number={1},
+  pages={550--561},
+  year={2009},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{marshall2017neural,
+  title={A neural network approach for truth discovery in social sensing},
+  author={Marshall, Jermaine and Argueta, Arturo and Wang, Dong},
+  booktitle={2017 IEEE 14th international conference on mobile Ad Hoc and sensor systems (MASS)},
+  pages={343--347},
+  year={2017},
+  organization={IEEE}
+}
+
+
+@inproceedings{balakrishnan2011sourcerank,
+  title={Sourcerank: Relevance and trust assessment for deep web sources based on inter-source agreement},
+  author={Balakrishnan, Raju and Kambhampati, Subbarao},
+  booktitle={Proceedings of the 20th international conference on World wide web},
+  pages={227--236},
+  year={2011}
+}
+
+@article{berti2015veracity,
+  title={Veracity of data: From truth discovery computation algorithms to models of misinformation dynamics},
+  author={Berti-Equille, Laure and Borge-Holthoefer, Javier},
+  journal={Synthesis Lectures on Data Management},
+  volume={7},
+  number={3},
+  pages={1--155},
+  year={2015},
+  publisher={Morgan \& Claypool Publishers}
+}
+
+@inproceedings{koniecznyP08_improvement,
+  author    = {S{\'{e}}bastien Konieczny and
+               Ram{\'{o}}n Pino P{\'{e}}rez},
+  editor    = {Gerhard Brewka and
+               J{\'{e}}r{\^{o}}me Lang},
+  title     = {Improvement Operators},
+  booktitle = {Principles of Knowledge Representation and Reasoning: Proceedings
+               of the Eleventh International Conference, {KR} 2008, Sydney, Australia,
+               September 16-19, 2008},
+  pages     = {177--187},
+  publisher = {{AAAI} Press},
+  year      = {2008},
+  url       = {http://www.aaai.org/Library/KR/2008/kr08-018.php},
+}
+
+@article{konieczny2002merging,
+  title={Merging information under constraints: a logical framework},
+  author={Konieczny, S{\'e}bastien and P{\'e}rez, Ram{\'o}n Pino},
+  journal={Journal of Logic and computation},
+  volume={12},
+  number={5},
+  pages={773--808},
+  year={2002},
+  publisher={Oxford University Press}
+}
+
+@book{laslier2010handbook,
+  title={Handbook on approval voting},
+  author={Laslier, Jean-Fran{\c{c}}ois and Sanver, M Remzi},
+  year={2010},
+  publisher={Springer Science \& Business Media}
+}
+
+@techreport{page_pagerank_1999,
+	type = {Technical {Report}},
+	title = {The {PageRank} {Citation} {Ranking}: {Bringing} {Order} to the {Web}.},
+	url = {http://ilpubs.stanford.edu:8090/422/},
+	abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.},
+	number = {1999-66},
+	institution = {Stanford InfoLab},
+	author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
+	month = nov,
+	year = {1999},
+	keywords = {ranking},
+	annote = {Previous number = SIDL-WP-1999-0120},
+}
+
+@misc{skibski_pagerank,
+  doi = {10.48550/ARXIV.2010.08487},
+  url = {https://arxiv.org/abs/2010.08487},
+  author = {Wąs, Tomasz and Skibski, Oskar},
+  keywords = {Social and Information Networks (cs.SI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Axiomatic Characterization of PageRank},
+  publisher = {arXiv},
+  year = {2020},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
