--- a/body.tex
+++ b/body.tex
@@ -2,8 +2,12 @@
 \input{chapters/introduction/content.tex}
 
 \part{Social Choice Perspectives}
+
 \input{chapters/social-choice-introduction/content.tex}
+
+\input{chapters/truthdiscovery/macros.tex}
 \input{chapters/truthdiscovery/content.tex}
+
 \input{chapters/tournaments/content.tex}
 
 \part{Logic-based Perspectives}
